tests/ui/c-variadic/no-closure.stderr
error[E0743]: C-variadic type `...` may not be nested inside another type
  --> $DIR/no-closure.rs:6:35
   |
LL | const F: extern "C" fn(...) = |_: ...| {};
   |                                   ^^^

error: unexpected `...`
  --> $DIR/no-closure.rs:10:14
   |
LL |     let f = |...| {};
   |              ^^^ not a valid pattern
   |
help: for a rest pattern, use `..` instead of `...`
   |
LL -     let f = |...| {};
LL +     let f = |..| {};
   |

error[E0743]: C-variadic type `...` may not be nested inside another type
  --> $DIR/no-closure.rs:14:17
   |
LL |     let f = |_: ...| {};
   |                 ^^^

error: `..` patterns are not allowed here
  --> $DIR/no-closure.rs:10:14
   |
LL |     let f = |...| {};
   |              ^^^
   |
   = note: only allowed in tuple, tuple struct, and slice patterns

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0743`.
